fix font alignment

--- a/src/components/landing/testimonial.module.scss
+++ b/src/components/landing/testimonial.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   gap: 64px;
   padding: 64px;
   @include mixins.tablet {
